--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.8.6",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "axios-mock-adapter": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "moment": "^2.30.1",
+    "mongodb-memory-server": "^10.1.2",
     "mongoose": "^8.8.0"
   }
 }
