--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node ./dist/app.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "author": "Pavol Kascak",
   "license": "ISC",
