--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 3010:3010
     environment:
-      - MONGO_DB_URL=mongodb://mongo:27017 # docker specific mongodb url
+      - MONGO_DB_URL==${MONGO_DB_URL} # docker specific mongodb url
     env_file:
       - .env
     depends_on:
