--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.8.6",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
@@ -26,6 +28,8 @@
     "jest": "^29.7.0",
     "moment": "^2.30.1",
     "mongodb-memory-server": "^10.1.2",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
